Manuals/LJV_communication_library1_3/20130301_1_3_0_0 x86/ja/Sample/C#/Sample/Source/include/LJV7_IF.h



/// Ｅｔｈｅｒｎｅｔ設定構造体
typedef struct {
	BYTE	abyIpAddress[4];	// 接続するコントローラのIPアドレス
	WORD	wPortNo;			// 接続するコントローラのポート番号
	BYTE	reserve[2];			// 予約
} LJV7IF_ETHERNET_CONFIG;


/// 日時構造体
typedef struct {
	BYTE byYear;		// 年(０～９９の範囲で、２０００～２０９９年を意味する)
	BYTE byMonth;		// 月(１～１２)
	BYTE byDay;			// 日(１～３１)
	BYTE byHour;		// 時(０～２３)
	BYTE byMinute;		// 分(０～５９)
	BYTE bySecond;		// 秒(０～５９)
	BYTE reserve[2];	// 予約
} LJV7IF_TIME;


/// 測定結果構造体
typedef struct {
	BYTE byDataInfo;		// 測定値が有効値か
	BYTE byJudge;			// 公差判定結果
	BYTE reserve[2];		// 予約
	FLOAT fValue;			// 測定値
} LJV7IF_MEASURE_DATA;


/// プロファイル情報構造体
typedef struct {
	BYTE	byProfileCnt;	// プロファイルデータがいくつ格納されているか
	BYTE	byEnvelope;		// プロファイル圧縮（時間軸）がＯＮかどうか
	BYTE 	reserve[2];		// 予約
	WORD	wProfDataCnt;	// プロファイルのデータ数
	BYTE 	reserve2[2];	// 予約
	LONG	lXStart;		// １点目のⅩ座標
	LONG	lXPitch;		// プロファイルデータのⅩ方向間隔
} LJV7IF_PROFILE_INFO;


/// 高機能モードプロファイル取得要求構造体（バッチ測定：ＯＮ）
typedef struct {
	BYTE byPosMode;		// バッチ位置指定方法
	BYTE reserve[3];		// 予約
	DWORD dwGetBatchNo;		// 取得対象のプロファイルのバッチ番号
	DWORD dwGetProfNo;		// 指定バッチ番号内の取得開始プロファイル番号
	BYTE byGetProfCnt;		// 読み出すプロファイルの数
	BYTE reserve2[3];		// 予約
} LJV7IF_GET_BATCH_PROFILE_ADVANCE_REQ;


/// 高機能モードプロファイル取得返信構造体（バッチ測定：ＯＮ）
typedef struct {
	DWORD	dwGetBatchNo;			// 読み出したバッチ番号。
	DWORD	dwGetBatchProfCnt;		// 読み出したバッチ内のプロファイルの数。
	DWORD	dwGetBatchTopProfNo;	// 読み出した中で、一番古いプロファイルがバッチ内の何番目のプロファイルかを示す。
	BYTE	byGetProfCnt;			// 読み出したプロファイルの数。
	BYTE 	reserve[3];				// 予約
} LJV7IF_GET_BATCH_PROFILE_ADVANCE_RSP;


/// ストレージ状態要求構造体
typedef struct {
	DWORD	dwRdArea;				// 読み出し対象面 
} LJV7IF_GET_STRAGE_STATUS_REQ;


/// ストレージ状態返信構造体
typedef struct {
	DWORD	dwSurfaceCnt;			// ストレージ面数
	DWORD	dwActiveSurface;		// アクティブストレージ面
} LJV7IF_GET_STRAGE_STATUS_RSP;


/// ストレージ情報構造体
typedef struct {
	BYTE	byStatus;				// ストレージ状態
	BYTE	byProgramNo;			// 該当ストレージ面のプログラムNo
	BYTE	byTarget;				// ストレージ対象
	BYTE	reserve[5];				// 予約
	DWORD	dwStorageCnt;			// ストレージ点数
} LJV7IF_STORAGE_INFO;


/// ストレージデータ取得要求構造体
typedef struct {
	BYTE 	reserve[4];				// 予約
	DWORD	dwSurface;				// 読み出しストレージ面
	DWORD	dwStartNo;				// 読み出し開始するストレージ番号
	DWORD	dwDataCnt;				// 読み出し点数
} LJV7IF_GET_STORAGE_REQ;


/// バッチプロファイルストレージ取得要求構造体
typedef struct {
	BYTE 	reserve[4];				// 予約
	DWORD	dwSurface;				// 読み出しストレージ面
	DWORD	dwGetBatchNo;			// 読み出バッチ番号
	DWORD	dwGetBatchTopProfNo;	// バッチ内の読み出し開始プロファイル番号
	BYTE	byGetProfCnt;			// 読み出しプロファイル点数
	BYTE	reserved[3];			// 予約
} LJV7IF_GET_BATCH_PROFILE_STORAGE_REQ;


/// ストレージデータ取得返信構造体
typedef struct {
	DWORD	dwStartNo;				// 読み出し開始するストレージ番号
	DWORD	dwDataCnt;				// 読み出し点数
	LJV7IF_TIME	stBaseTime;			// 基準時刻
} LJV7IF_GET_STORAGE_RSP;


/// バッチプロファイルストレージ取得返信構造体
typedef struct {
	DWORD	dwGetBatchNo;			// 読み出バッチ番号
	DWORD	dwGetBatchProfCnt;		// 読み出バッチ内のプロファイル数
	DWORD	dwGetBatchTopProfNo;	// バッチ内の読み出し開始プロファイル番号
	BYTE	byGetProfCnt;			// 読み出しプロファイル点数
	BYTE 	reserve[3];				// 予約
	LJV7IF_TIME	stBaseTime;			// 基準時刻
} LJV7IF_GET_BATCH_PROFILE_STORAGE_RSP;


/// 高速通信開始要求構造体
typedef struct {
	BYTE	bySendPos;				// 送信開始位置 
	BYTE	reserve[3];				// 予約
} LJV7IF_HIGH_SPEED_PRE_START_REQ;


/**
高速通信用コールバック関数IF
@param	pBuffer		プロファイルデータが格納されているバッファへのポインタ。
@param	dwSize		１プロファイルあたりのＢＹＴＥ単位でのサイズ。(ヘッダ及びフッタのサイズも含む。) 
@param	dwCount		pBufferに格納されているプロファイルの数。
@param	dwNotify	高速データ通信の中断やバッチ測定の区切りを通知する。
@param	dwUser		高速通信初期化時にセットしたユーザ独自情報。
*/
typedef void (_cdecl *LJV7IF_CALLBACK)(BYTE* pBuffer, DWORD dwSize, DWORD dwCount, DWORD dwNotify, DWORD dwUser);


	/**
	プロファイル取得（動作モード"高機能（ＯＵＴ測定あり）"）
	@param	lDeviceId	デバイスID
	@param	pProfileInfo	プロファイル情報
	@param	pdwProfileData	プロファイルデータ
	@param	dwDataSize	pdwProfileDataのBYTEサイズ
	@param	pMeasureData	測定結果
	@return	リターンコード
	@note	
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_GetProfileAdvance(LONG lDeviceId, LJV7IF_PROFILE_INFO* pProfileInfo, DWORD* pdwProfileData, DWORD dwDataSize, LJV7IF_MEASURE_DATA* pMeasureData);


	/**
	バッチプロファイル取得（動作モード"高機能（ＯＵＴ測定あり）"）
	@param	lDeviceId	デバイスID
	@param	pReq	取得プロファイル指定情報
	@param	pRsp	プロファイル取得結果
	@param	pProfileInfo	プロファイル情報
	@param	pdwBatchData	バッチプロファイルデータ
	@param	dwDataSize	pdwBatchDataのBYTEサイズ
	@param	pBatchMeasureData	取得対象のバッチデータに対する測定結果
	@param	pMeasureData	コマンド処理時点での最新測定結果
	@return	リターンコード
	@note	
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_GetBatchProfileAdvance(LONG lDeviceId, LJV7IF_GET_BATCH_PROFILE_ADVANCE_REQ* pReq, 
		LJV7IF_GET_BATCH_PROFILE_ADVANCE_RSP* pRsp, LJV7IF_PROFILE_INFO* pProfileInfo, 
		DWORD* pdwBatchData, DWORD dwDataSize, LJV7IF_MEASURE_DATA* pBatchMeasureData, LJV7IF_MEASURE_DATA* pMeasureData);


	// ストレージ機能関連
	/**
	ストレージ開始
	@param	lDeviceId	デバイスID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_StartStorage(LONG lDeviceId);


	/**
	ストレージ停止
	@param	lDeviceId	デバイスID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_StopStorage(LONG lDeviceId);


	/**
	ストレージ状態取得
	@param	lDeviceId	デバイスID
	@param	pReq	取得ストレージ指定情報
	@param	pRsp	取得ストレージ
	@param	pStorageInfo	ストレージ情報
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_GetStorageStatus(LONG lDeviceId, LJV7IF_GET_STRAGE_STATUS_REQ* pReq, LJV7IF_GET_STRAGE_STATUS_RSP* pRsp, LJV7IF_STORAGE_INFO* pStorageInfo);

	
	/**
	データストレージデータ取得
	@param	lDeviceId	デバイスID
	@param	pReq	取得データ指定情報
	@param	pStorageInfo	ストレージ情報
	@param	pRes	取得データ情報
	@param	pdwData	取得データ
	@param	dwDataSize	pdwDataのBYTEサイズ
	@return	リターンコード
	@note	
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_GetStorageData(LONG lDeviceId, LJV7IF_GET_STORAGE_REQ* pReq, LJV7IF_STORAGE_INFO* pStorageInfo, LJV7IF_GET_STORAGE_RSP* pRes, DWORD* pdwData, DWORD dwDataSize);

	
	/**
	プロファイルストレージデータ取得
	@param	lDeviceId	デバイスID
	@param	pReq	取得プロファイル指定情報
	@param	pStorageInfo	ストレージ情報
	@param	pRes	プロファイル取得結果
	@param	pProfileInfo	プロファイル情報
	@param	pdwData	プロファイルデータ
	@param	dwDataSize	pdwDataのBYTEサイズ
	@return	リターンコード
	@note	
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_GetStorageProfile(LONG lDeviceId, LJV7IF_GET_STORAGE_REQ* pReq, LJV7IF_STORAGE_INFO* pStorageInfo, LJV7IF_GET_STORAGE_RSP* pRes, LJV7IF_PROFILE_INFO* pProfileInfo, DWORD* pdwData, DWORD dwDataSize);


	/**
	バッチプロファイルストレージデータ取得
	@param	lDeviceId	デバイスID
	@param	pReq	取得バッチプロファイル指定情報
	@param	pStorageInfo	ストレージ情報
	@param	pRes	バッチプロファイル取得結果
	@param	pProfileInfo	プロファイル情報
	@param	pdwData	プロファイルデータ
	@param	dwDataSize	pdwDataのBYTEサイズ
	@param	pTimeOffset	基準時刻からのms単位の経過時間
	@param	pMeasureData	測定結果
	@return	リターンコード
	@note	
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_GetStorageBatchProfile(LONG lDeviceId, LJV7IF_GET_BATCH_PROFILE_STORAGE_REQ* pReq, LJV7IF_STORAGE_INFO* pStorageInfo, 
		LJV7IF_GET_BATCH_PROFILE_STORAGE_RSP* pRes, LJV7IF_PROFILE_INFO* pProfileInfo, DWORD* pdwData, DWORD dwDataSize, DWORD* pTimeOffset, LJV7IF_MEASURE_DATA* pMeasureData);


	// 高速データ通信関連
	/**
	高速データ通信初期化(USB)
	@param	lDeviceId	デバイスID
	@param	pCallBack	受信時実行関数
	@param	dwProfileCnt	pCallBack呼び出し頻度
	@param	dwThreadId	スレッドID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_HighSpeedDataUsbCommunicationInitalize(LONG lDeviceId, LJV7IF_CALLBACK pCallBack, DWORD dwProfileCnt, DWORD dwThreadId);


	/**
	高速データ通信初期化(Ethernet)
	@param	lDeviceId	デバイスID
	@param	pEthernetConfig	Ethernet設定
	@param	wHighSpeedPortNo	高速データ通信ポート
	@param	pCallBack	受信時実行関数
	@param	dwProfileCnt	pCallBack呼び出し頻度
	@param	dwThreadId	スレッドID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_HighSpeedDataEthernetCommunicationInitalize(LONG lDeviceId, LJV7IF_ETHERNET_CONFIG* pEthernetConfig, WORD wHighSpeedPortNo,
		LJV7IF_CALLBACK pCallBack, DWORD dwProfileCnt, DWORD dwThreadId);


	/**
	高速データ通信開始準備
	@param	lDeviceId	デバイスID
	@param	pReq	送信データ情報
	@param	pProfileInfo	プロファイル情報
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_PreStartHighSpeedDataCommunication(LONG lDeviceId, LJV7IF_HIGH_SPEED_PRE_START_REQ* pReq, LJV7IF_PROFILE_INFO* pProfileInfo);


	/**
	高速データ通信開始
	@param	lDeviceId	デバイスID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_StartHighSpeedDataCommunication(LONG lDeviceId);


	/**
	高速データ通信停止
	@param	lDeviceId	デバイスID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_StopHighSpeedDataCommunication(LONG lDeviceId);


	/**
	高速データ通信終了
	@param	lDeviceId	デバイスID
	@return	リターンコード
	*/
	LJV7_IF_API LONG WINAPI LJV7IF_HighSpeedDataCommunicationFinalize(LONG lDeviceId);