Manuals/LJV_communication_library1_3/20130301_1_3_0_0 x86/ja/Sample/C#/Sample/Source/Sample/NativeMethods.cs

		
		/// <summary>
		/// プロファイル取得（動作モード"高機能（ＯＵＴ測定あり）"）
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <param name="pdwProfileData">プロファイルデータ</param>
		/// <param name="dwDataSize">pdwProfileDataのBYTEサイズ</param>
		/// <param name="pMeasureData">測定結果</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetProfileAdvance(int lDeviceId, ref LJV7IF_PROFILE_INFO pProfileInfo,
			IntPtr pdwProfileData, uint dwDataSize, [Out]LJV7IF_MEASURE_DATA[] pMeasureData);

		/// <summary>
		/// バッチプロファイル取得（動作モード"高機能（ＯＵＴ測定あり）"）
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得プロファイル指定情報</param>
		/// <param name="pRsp">プロファイル取得結果</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <param name="pdwBatchData">バッチプロファイルデータ</param>
		/// <param name="dwDataSize">pdwBatchDataのBYTEサイズ</param>
		/// <param name="pBatchMeasureData">測定結果</param>
		/// <param name="pMeasureData">測定結果</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetBatchProfileAdvance(int lDeviceId, ref LJV7IF_GET_BATCH_PROFILE_ADVANCE_REQ pReq,
			ref LJV7IF_GET_BATCH_PROFILE_ADVANCE_RSP pRsp, ref LJV7IF_PROFILE_INFO pProfileInfo,
			IntPtr pdwBatchData, uint dwDataSize, [Out]LJV7IF_MEASURE_DATA[] pBatchMeasureData, [Out]LJV7IF_MEASURE_DATA[] pMeasureData);

		/// <summary>
		/// ^ストレージ開始
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_StartStorage(int lDeviceId);

		/// <summary>
		/// ストレージ停止
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_StopStorage(int lDeviceId);

		/// <summary>
		/// ストレージ状態取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得ストレージ指定情報</param>
		/// <param name="pRsp">取得ストレージ</param>
		/// <param name="pStorageInfo">ストレージ情報</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetStorageStatus(int lDeviceId, ref LJV7IF_GET_STRAGE_STATUS_REQ pReq,
			ref LJV7IF_GET_STRAGE_STATUS_RSP pRsp, ref LJV7IF_STORAGE_INFO pStorageInfo);
				
		/// <summary>
		/// データストレージデータ取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得データ指定情報</param>
		/// <param name="pStorageInfo">ストレージ情報</param>
		/// <param name="pRsp">取得データ情報</param>
		/// <param name="pdwData">取得データ</param>
		/// <param name="dwDataSize">pdwDataのBYTEサイズ</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetStorageData(int lDeviceId, ref LJV7IF_GET_STORAGE_REQ pReq,
			ref LJV7IF_STORAGE_INFO pStorageInfo, ref LJV7IF_GET_STORAGE_RSP pRsp, IntPtr pdwData, uint dwDataSize);

		/// <summary>
		/// プロファイルストレージデータ取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得プロファイル指定情報</param>
		/// <param name="pStorageInfo">ストレージ情報</param>
		/// <param name="pRes">プロファイル取得結果</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <param name="pdwData">プロファイルデータ</param>
		/// <param name="dwDataSize">pdwDataのBYTEサイズ</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetStorageProfile(int lDeviceId, ref LJV7IF_GET_STORAGE_REQ pReq, 
			ref LJV7IF_STORAGE_INFO pStorageInfo, ref LJV7IF_GET_STORAGE_RSP pRes,
			ref LJV7IF_PROFILE_INFO pProfileInfo, IntPtr pdwData, uint dwDataSize);

		/// <summary>
		/// バッチプロファイルストレージデータ取得
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">取得バッチプロファイル指定情報</param>
		/// <param name="pStorageInfo">ストレージ情報</param>
		/// <param name="pRes">バッチプロファイル取得結果</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <param name="pdwData">プロファイルデータ</param>
		/// <param name="dwDataSize">pdwDataのBYTEサイズ</param>
		/// <param name="pTimeOffset">基準時刻からのms単位の経過時間</param>
		/// <param name="pMeasureData">測定結果</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_GetStorageBatchProfile(int lDeviceId, 
			ref LJV7IF_GET_BATCH_PROFILE_STORAGE_REQ pReq, ref LJV7IF_STORAGE_INFO pStorageInfo,
			ref LJV7IF_GET_BATCH_PROFILE_STORAGE_RSP pRes, ref LJV7IF_PROFILE_INFO pProfileInfo,
			IntPtr pdwData, uint dwDataSize, ref uint pTimeOffset, [Out]LJV7IF_MEASURE_DATA[] pMeasureData);

		/// <summary>
		/// 高速データ通信初期化(USB)
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pCallBack">受信時実行関数</param>
		/// <param name="dwProfileCnt">pCallBack呼び出し頻度</param>
		/// <param name="dwThreadId">スレッドID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_HighSpeedDataUsbCommunicationInitalize(int lDeviceId, 
			HightSpeedDataCallBack pCallBack, uint dwProfileCnt, uint dwThreadId);

		/// <summary>
		/// 高速データ通信初期化(Ethernet)
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pEthernetConfig">Ethernet設定</param>
		/// <param name="wHighSpeedPortNo">高速データ通信ポート</param>
		/// <param name="pCallBack">受信時実行関数</param>
		/// <param name="dwProfileCnt">pCallBack呼び出し頻度</param>
		/// <param name="dwThreadId">スレッドID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_HighSpeedDataEthernetCommunicationInitalize(
			int lDeviceId, ref LJV7IF_ETHERNET_CONFIG pEthernetConfig, ushort wHighSpeedPortNo,
			HightSpeedDataCallBack pCallBack, uint dwProfileCnt, uint dwThreadId);

		/// <summary>
		/// 高速データ通信開始準備
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <param name="pReq">送信データ情報</param>
		/// <param name="pProfileInfo">プロファイル情報</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_PreStartHighSpeedDataCommunication(
			int lDeviceId, ref LJV7IF_HIGH_SPEED_PRE_START_REQ pReq,
			ref LJV7IF_PROFILE_INFO pProfileInfo);

		/// <summary>
		/// 高速データ通信開始
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_StartHighSpeedDataCommunication(int lDeviceId);

		/// <summary>
		/// 高速データ通信停止
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_StopHighSpeedDataCommunication(int lDeviceId);

		/// <summary>
		/// 高速データ通信終了
		/// </summary>
		/// <param name="lDeviceId">デバイスID</param>
		/// <returns>リターンコード</returns>
		[DllImport("LJV7_IF.dll")]
		internal static extern int LJV7IF_HighSpeedDataCommunicationFinalize(int lDeviceId);
	}
};
